<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg1"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/internet"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/alleluia"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/alleluia" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/spacer"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/ari"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ari" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/spacer"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/erepo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/erepo" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/spacer"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/isos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/isos" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/spacer"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/fifthhymnsback"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/back" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/spacer"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/fifthhymnshome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/home" />

</LinearLayout>